More major changes

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8" />
-	<title>wolfy1339 &middot; Sandbox</title>  
+	<title>wolfy1339 &middot; Sandbox</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- favicons -->
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon16.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon32.png" />
@@ -10,10 +11,12 @@
 	<!-- meta -->
     <meta name="keywords" content="wolfy1339, bmn, powder toy, tpt" />
     <meta name="description" content="Welcome to wolfy1339's 'Sandbox Website'. Here there will be lot's of random things." />
+	<meta name="google-site-verification" content="4lR7BiwhfA_pRKzUqOfetn4TYMokB6DVHsnIe63-3Rg" />
+	<meta name="msvalidate.01" content="57B77663C1E3F51F4E0EB692FABFB7DA" />
 	<!-- CSS -->
 	<link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
 	<link rel="stylesheet" href="bootstrap/bootstrap-responsive.min.css" />
-	<link rel="stylesheet" href="style.css" />
+	<link rel="stylesheet" href="style.min.css" />
 </head>
 <body>
         <div class="container-narrow">
@@ -21,6 +24,7 @@
             <ul class="nav nav-pills pull-right">
                 <li class="active"><a href="index.html">Hub</a></li>
                 <li><a href="cookieclicker/index.html">Cookie Clicker</a></li>
+				<li class="disabled" title="Not released yet"><a href="#">TPT Mod</a></li>
             </ul>
             <h2>wolfy1339<br><small>Community Hub</small></h2>
         </div>
@@ -37,24 +41,24 @@
         <hr>
         <div class="row-fluid subheadings">
           <div class="span6">
-            <a href="https://github.com/Brilliant-Minds">
+            <a href="https://github.com/wolfy1339">
               <img src="img/github.png" alt="GitHub">
-              <h4>GitHub Organization</h4>
+              <h4>GitHub</h4>
             </a>
-            <p>Participate in community projects like our <a href="mod.html">The Powder Toy mod</a> and this website.</p>
-            <a href="irc://irc.freenode.net:6667/BMN">
+            <p>I participate in community projects like the BMN <a href="http://brilliant-minds.github.io/mod.html">The Powder Toy mod</a> and their <a href="http://brilliant-minds.github.io">website</a>.</p>
+            <a href="irc://irc.freenode.net:6667/powder">
               <img src="img/irc.png" alt="Freenode">
               <h4>IRC</h4>
             </a>
-            <p>Meet other BMN members inside the #BMN channel at irc.freenode.net. You can alternatively use the <a href="http://webchat.freenode.net/?channels=BMN">Webchat</a> for a quick talk.</p>
+            <p>Meet other TPT members inside the #powder channel at irc.freenode.net. You can alternatively use the <a href="http://webchat.freenode.net/?channels=powder">Webchat</a> for a quick talk.</p>
           </div>
           <div class="span6">
             <!-- TODO: Fix the search query with a real tag search -->
-            <a href="http://powdertoy.co.uk/Browse.html?Search_Query=BMN">
+            <a href="http://powdertoy.co.uk/Browse.html?Search_Query=wolfy1339">
               <img src="img/powder.png" alt="TPT">
               <h4>Creations</h4>
             </a>
-            <p>Search for all TPT saves tagged with "BMN".<br>&nbsp;</p>
+            <p>Search for all TPT saves tagged with "wolfy1339".<br>&nbsp;</p>
             <br>
             <h4>More stuff</h4>
             <ul class="forum-list">
@@ -67,7 +71,7 @@
       </div>
       <hr>
       <div class="footer">
-        <a class="muted" href="https://github.com/Brilliant-Minds/Brilliant-Minds.github.io">repo</a>
+        <a class="muted" href="https://github.com/wolfy1339/wolfy1339.github.io">repo</a>
       </div>
     </div>
 	
