--- a/cookieclicker/index.html
+++ b/cookieclicker/index.html
@@ -75,15 +75,15 @@ Feel free to alter this code to your liking, but please do not re-host it, do no
 			<div id="buildingsTitle" class="inset title zoneTitle">Buildings</div>
 			<div id="rows"></div>
 			<div id="menu"></div>
-			<div id="donateBox">
+			<!--<div id="donateBox">
 				<form target="_blank" action="https://www.paypal.com/cgi-bin/webscr" method="post" id="donate" style="margin:0px 16px;">
 				<input type="hidden" name="cmd" value="_s-xclick">
 				<input type="hidden" name="hosted_button_id" value="BBN2WL3TC6QH4">
-				<input type="image" src="https://www.paypalobjects.com/en_GB/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal — The safer, easier way to pay online.">
+				<input type="image" src="https://www.paypalobjects.com/en_GB/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal ï¿½ The safer, easier way to pay online.">
 				<img alt="" border="0" src="https://www.paypalobjects.com/nl_NL/i/scr/pixel.gif" width="1" height="1">
 				</form>
 				Help us keep developing the game!
-			</div>
+			</div>-->
 		</div>
 		<div id="sectionRight" class="inset">
 			<div id="store">
@@ -95,15 +95,15 @@ Feel free to alter this code to your liking, but please do not re-host it, do no
 			</div>
 			<div id="support" style="margin-top:130px;">
 				<div style="position:relative;">
-					<script async src="http://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-					<!-- Cookie Clicker Rectangle -->
+					<!--<script async src="http://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+				        Cookie Clicker Rectangle
 					<ins class="adsbygoogle"
 						 style="display:inline-block;width:300px;height:250px;position:relative;z-index:100;"
 						 data-ad-client="ca-pub-8491708950677704"
 						 data-ad-slot="9349826096"></ins>
 					<script>
 					(adsbygoogle = window.adsbygoogle || []).push({});
-					</script>	
+					</script>-->	
 					<div id="supportPlaceholder">
 			</div>
 		</div>		
