--- a/mod.html
+++ b/mod.html
@@ -61,14 +61,31 @@
           </div>
         </ul>
       </div>
+      <ul id="multicol-menu" class="nav pull-right">
+    <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">MultiCol Menu <b class="caret"></b></a>
+        <ul class="dropdown-menu">
+            <li>
+                <div class="row" style="width: 400px;">
+                    <ul class="list-unstyled col-md-4">
+                        <li><a href="#">Linux 64-bit</a></li>
+                        <li><a href="#">Linux 64-bit</a></li>
+                    </ul>
+                    <ul class="list-unstyled col-md-4">
+                        <li><a href="#">test2-1</a></li>
+                        <li><a href="#">test2-2</a></li>
+                    </ul>
+                </div>
+            </li>
+        </ul>
+    </li>
+</ul>
       <br><small class="muted">in-dev branch:&nbsp;</small>
-        <a href="https://travis-ci.org/Brilliant-Minds/BMN-Powder-Toy"><img src="https://travis-ci.org/Brilliant-Minds/BMN-Powder-Toy.svg?branch=develop" alt="TravisCI"></a>
+        <a href="https://travis-ci.org/wolfy1339/Wolfy-Powder-Toy"><img src="https://travis-ci.org/wolfy1339/Wolfy-Powder-Toy.svg?branch=develop" alt="TravisCI"></a>
     </div>
-
     <hr>
-
-    <div class="row-fluid subheadings">
-      <div class="span6">
+    <div class="row marketing subheadings">
+      <div class="col-md-6">
         <a href="https://github.com/Brilliant-Minds/BMN-Powder-Toy"><img src="img/github.png" alt="GitHub">
         <h4>GitHub</h4></a>
         <p>You can find the source code of this mod on GitHub and participate with feedback and code.</p>
@@ -77,7 +94,7 @@
         <p>wolfy1339, nucular</p>
       </div>
 
-      <div class="span6">
+      <div class="col-md-6">
         <h4>TravisCI</h4>
         <p>This mod uses TravisCI to make sure that everything is compilable.</p>
 
@@ -85,15 +102,11 @@
         <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
       </div>
     </div>
-
     <hr>
-
     <div class="footer">
-      <a class="muted" href="https://github.com/Brilliant-Minds/Brilliant-Minds.github.io">repo</a>
+      <a class="text-muted" href="https://github.com/Brilliant-Minds/Brilliant-Minds.github.io">repo</a>
     </div>
-
   </div>
-
   <!-- JavaScript -->
   <script src="bootstrap/jquery.min.js"></script>
   <script src="bootstrap/bootstrap.min.js"></script>
