--- a/mod.html
+++ b/mod.html
@@ -13,16 +13,10 @@
     <!-- meta -->
     <meta name="keywords" content="the powder toy, BMN, powder toy, navy, minds, brilliant, brilliant minds of the navy, powder, game, group, mobile, tpt, bomb, mod, free, info" />
     <meta name="description" content="Welcome to the Brilliant Minds of the Navy! This is the website for our group on The Powder Toy" />
-	<meta property="og:type" content="game" />
-	<meta property="og:title" content="Brilliant Minds Of The Navy" />
-	<meta property="og:url" content="http://brilliant-minds.github.io" />
-	<meta property="og:site_name" content="BMN" />
-	<meta property="og:description" content="Welcome to the Brilliant Minds of the Navy! This is the website for our group on The Powder Toy" />
-	<meta property="og:image" content="/img/logo.png" />
-	
+
     <!-- CSS -->
     <link href="bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="bootstrap/bootstrap-responsive.min.css" rel="stylesheet" />
+    <link href="bootstrap/bootstrap-theme.css" rel="stylesheet" />
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
