--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
         </div>
         <hr>
         <div class="jumbotron">
-          <img src="img/wolf.svg" id="hub-logo" alt="wolfy1339" height="126px" width="126px" />
+          <!--[if lt IE 9]><!--><img src="img/wolf.svg" id="hub-logo" type="image/svg+xml" alt="wolfy1339" height="126px" width="126px" /><!--[endif]>-->
+          <!--[if lt IE 9]><img src="img/wolf.jpeg" type="image/jpeg" id="hub-logo" alt="wolfy1339" height="126px" width="126px" /><![endif]-->
           <h1>Wolfy1339</h1>
           <div id="hub-jumbotron-text">
             <p class="lead">About me</p>
