--- a/mod.html
+++ b/mod.html
@@ -15,8 +15,8 @@
     <meta name="description" content="Welcome to the Brilliant Minds of the Navy! This is the website for our group on The Powder Toy" />
 
     <!-- CSS -->
-    <link href="bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="bootstrap/bootstrap-theme.css" rel="stylesheet" />
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="bootstrap/css/bootstrap-theme.css" rel="stylesheet" />
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
@@ -39,35 +39,30 @@
       <p class="lead">Merge ALL the mods!</p>
       <p class="sub-lead">Here should go some more informations about the current release, but I'm too lazy to invent this text so I'm just writing some senseless stuff here.
       </p>
-      <div class="btn-group">
-        <a class="btn btn-large btn-success dropdown-toggle" data-toggle="dropdown" href="#">
-          Download
-          <span class="caret"></span>
-        </a>
-        <ul class="dropdown-menu">
-          <div class="btn-group btn-group-vertical">
-            <a class="btn btn-success" href="#">Windows 32-bit</a>
-            <a class="btn" href="#">Windows 64-bit</a>
-          </div>
-          <div class="btn-group btn-group-vertical">
-            <a class="btn" href="#">Linux 32-bit</a>
-            <a class="btn" href="#">Linux 64-bit</a>
-          </div>
-        </ul>
-      </div>
-      <ul id="multicol-menu" class="nav pull-right">
+<div class="btn-group dropdown-toggle" id="multicol-menu">
+<a href="#" class="btn btn-lg btn-success">downlado</a>
+<li class="dropdown-menu>
+</div>
+<ul id="multicol-menu" class="btn btn-lg btn-success">
     <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">MultiCol Menu <b class="caret"></b></a>
         <ul class="dropdown-menu">
             <li>
                 <div class="row" style="width: 400px;">
                     <ul class="list-unstyled col-md-4">
-                        <li><a href="#">Linux 64-bit</a></li>
-                        <li><a href="#">Linux 64-bit</a></li>
+                        <li><a href="#">test1-1</a></li>
+                        <li><a href="#">test1-2</a></li>
+                        <li><a href="#">test1-3</a></li>
                     </ul>
                     <ul class="list-unstyled col-md-4">
                         <li><a href="#">test2-1</a></li>
                         <li><a href="#">test2-2</a></li>
+                        <li><a href="#">test2-3</a></li>
+                    </ul>
+                    <ul class="list-unstyled col-md-4">
+                        <li><a href="#">test3-1</a></li>
+                        <li><a href="#">test3-2</a></li>
+                        <li><a href="#">test3-3</a></li>
                     </ul>
                 </div>
             </li>
@@ -102,7 +97,7 @@
     </div>
   </div>
   <!-- JavaScript -->
-  <script src="bootstrap/jquery.min.js"></script>
-  <script src="bootstrap/bootstrap.min.js"></script>
+  <script src="bootstrap/js/jquery.min.js"></script>
+  <script src="bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
