--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </script>
 </head>
 <body>
-    <div class="container-narrow">
+    <div class="container">
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
           <li class="active"><a href="index.html">Hub</a></li>
