--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <script src="html5shiv.js"></script>
     <script src="respond.min.js"></script>
     <![endif]-->
-    <!--[if lt IE 7]>
+    <!--[if lt IE 8]>
     <link href="bootstrap-ie7.min.css" rel="stylesheet"/>
     <![endif]-->
     <!-- Fix for IE mobile -->
@@ -68,8 +68,8 @@
         </div>
         <hr>
         <div class="jumbotron">
-          <!--[if lt IE 9]><!--><img src="img/wolf.svg" id="hub-logo" type="image/svg+xml" alt="wolfy1339" height="126px" width="126px" /><!--[endif]>-->
-          <!--[if lt IE 9]><img src="img/wolf.jpeg" type="image/jpeg" id="hub-logo" alt="wolfy1339" height="126px" width="126px" /><![endif]-->
+          <!--[if lt IE 9]><!--><img src="img/wolf.svg" id="hub-logo" type="image/svg+xml" alt="wolfy1339" height="250em" width="250em" /><!--[endif]>-->
+          <!--[if lt IE 9]><img src="img/wolf.jpeg" type="image/jpeg" id="hub-logo" alt="wolfy1339" height="250em" width="250em" /><![endif]-->
           <h1>Wolfy1339</h1>
           <div id="hub-jumbotron-text">
             <p class="lead">About me</p>
