--- a/mod.html
+++ b/mod.html
@@ -14,7 +14,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>BMN &middot; TPT Mod</title>
+    <title>wolfy1339 &middot; TPT Mod</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- favicons -->
@@ -23,8 +23,8 @@
     <link rel="icon" type="image/png" sizes="48x48" href="img/favicon48.png" />
     
     <!-- meta -->
-    <meta name="keywords" content="the powder toy, BMN, powder toy, navy, minds, brilliant, brilliant minds of the navy, powder, game, group, mobile, tpt, bomb, mod, free, info" />
-    <meta name="description" content="Welcome to the Brilliant Minds of the Navy! This is the website for our group on The Powder Toy" />
+    <!--<meta name="keywords" content="the powder toy, BMN, powder toy, navy, minds, brilliant, brilliant minds of the navy, powder, game, group, mobile, tpt, bomb, mod, free, info" />
+    <meta name="description" content="Welcome to the Brilliant Minds of the Navy! This is the website for our group on The Powder Toy" />-->
 
     <!-- CSS -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
