--- a/skeleton.html
+++ b/skeleton.html
@@ -14,7 +14,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>BMN &middot; Skeleton</title>
+    <title>Wolfy1339 &middot; Skeleton</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- favicons -->
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon16.png" />
@@ -22,18 +22,12 @@
     <link rel="icon" type="image/png" sizes="48x48" href="img/favicon48.png" />
 
     <!-- meta -->
-    <meta name="keywords" content="the powder toy, BMN, powder toy, navy, minds, brilliant, brilliant minds of the navy, powder, game, group, mobile, tpt, bomb" />
-    <meta name="description" content="Welcome to the Brilliant Minds of the Navy! This is the website for our group on The Powder Toy" />
-	<meta property="og:type" content="game" />
-	<meta property="og:title" content="Brilliant Minds Of The Navy" />
-	<meta property="og:url" content="http://brilliant-minds.github.io" />
-	<meta property="og:site_name" content="BMN" />
-	<meta property="og:description" content="Welcome to the Brilliant Minds of the Navy! This is the website for our group on The Powder Toy" />
-	<meta property="og:image" content="/img/logo.png" />
-	
+    <!--<meta name="keywords" content="the powder toy, BMN, powder toy, navy, minds, brilliant, brilliant minds of the navy, powder, game, group, mobile, tpt, bomb" />
+    <meta name="description" content="Welcome to the Brilliant Minds of the Navy! This is the website for our group on The Powder Toy" />-->
+
     <!-- CSS -->
-    <link href="bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="bootstrap/bootstrap-responsive.min.css" rel="stylesheet" />
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="bootstrap/css/bootstrap-theme.min.css" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
 </head>
 <body>
@@ -42,11 +36,9 @@
           <ul class="nav nav-pills pull-right">
             <li class="active"><a href="index.html">Hub</a></li>
             <li><a href="infos.html">Infos</a></li>
-            <li><a href="members.html">Members</a></li>
-            <li><a href="ranks.html">Rank System</a></li>
             <li class="disabled" title="Not released yet"><a href="#">TPT Mod</a></li>
           </ul>
-          <h2>BMN<br><small>Add title here!</small></h2>
+          <h2>Wolfy1339<br><small>Add title here!</small></h2>
       </div>
 
       <hr>
@@ -56,13 +48,13 @@
       <hr>
 
       <div class="footer">
-        <a class="muted" href="https://github.com/Brilliant-Minds/Brilliant-Minds.github.io">repo</a>
+        <a class="muted" href="https://github.com/wolfy1339/wolfy1339.github.io">repo</a>
       </div>
 
     </div>
 
     <!-- JavaScript -->
-    <script src="bootstrap/jquery.min.js"></script>
-    <script src="bootstrap/bootstrap.min.js"></script>
+    <script src="bootstrap/js/jquery.min.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
