--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
           <h1>Wolfy1339</h1>
           <div id="hub-jumbotron-text">
             <p class="lead">About me</p>
-            <p class="sub-lead">I'm <span title="[wolf,y '1339">wolfy1339</span>. I do very, very basic <a href="http://en.wikipedia.org/wiki/Lua_programming_language" title="It's not an acronym, 2nd and 3rd letters are lowercase.">Lua</a> & <a href="http://en.wikipedia.org/wiki/Python_(programming_language)">Python</a>
-            <br/>My site is in HTML using the <a href="http://en.wikipedia.org/wiki/HTML5">HTML5</a> standards and it's mostly based on mniip's <a href="http://mniip.com">website</a>.<br /><a href="https://github.com/wolfy1339">My github</a>.</p>
+            <p class="sub-lead">I'm <span title="[wolf,y '1339">wolfy1339</span>. I do very, very basic <a href="http://en.wikipedia.org/wiki/Lua_programming_language" title="It's not an acronym, 2nd and 3rd letters are lowercase.">Lua</a> &amp; <a href="http://en.wikipedia.org/wiki/Python_(programming_language)">Python</a>
+            <br/>My site is built in <a href="http://en.wikipedia.org/wiki/HTML5">HTML5</a> and using <a href="http://getbootstrap.com">Twitter Bootstrap</a></p>
             <a class="btn btn-lg btn-success" href="http://powdertoy.co.uk/Groups/Page/View.html?Group=832">Group Page</a>
           </div>
         </div>
         <hr>
-        <div class="row marketing subheadings">
+        <div class="row subheadings">
           <div class="col-md-6">
             <a href="https://github.com/wolfy1339">
               <img src="img/github.png" alt="GitHub" rel="prefetch" height="64" width="64">
@@ -114,8 +114,8 @@
         <a class="muted" href="https://github.com/wolfy1339/wolfy1339.github.io">repo</a>
       </div>
     </div>
-	
-	<!-- JavaScript -->
+
+    <!-- JavaScript -->
     <script src="bootstrap/js/jquery.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
 </body>
