--- a/mod.html
+++ b/mod.html
@@ -43,9 +43,7 @@
       </ul>
       <h2>BMN<br><small>The Powder Toy Mod</small></h2>
     </div>
-
     <hr>
-
     <div class="jumbotron">
       <h1>V.0.1</h1>
       <p class="lead">Merge ALL the mods!</p>
@@ -53,7 +51,7 @@
       </p>
 <div class="btn-group dropdown-toggle" id="multicol-menu">
 <a href="#" class="btn btn-lg btn-success">downlado</a>
-<li class="dropdown-menu>
+<li class="dropdown-menu">
 </div>
 <ul id="multicol-menu" class="btn btn-lg btn-success">
     <li class="dropdown">
@@ -64,17 +62,10 @@
                     <ul class="list-unstyled col-md-4">
                         <li><a href="#">test1-1</a></li>
                         <li><a href="#">test1-2</a></li>
-                        <li><a href="#">test1-3</a></li>
                     </ul>
                     <ul class="list-unstyled col-md-4">
                         <li><a href="#">test2-1</a></li>
                         <li><a href="#">test2-2</a></li>
-                        <li><a href="#">test2-3</a></li>
-                    </ul>
-                    <ul class="list-unstyled col-md-4">
-                        <li><a href="#">test3-1</a></li>
-                        <li><a href="#">test3-2</a></li>
-                        <li><a href="#">test3-3</a></li>
                     </ul>
                 </div>
             </li>
@@ -85,7 +76,7 @@
         <a href="https://travis-ci.org/wolfy1339/Wolfy-Powder-Toy"><img src="https://travis-ci.org/wolfy1339/Wolfy-Powder-Toy.svg?branch=develop" alt="TravisCI"></a>
     </div>
     <hr>
-    <div class="row marketing subheadings">
+    <div class="row subheadings">
       <div class="col-md-6">
         <a href="https://github.com/Brilliant-Minds/BMN-Powder-Toy"><img src="img/github.png" alt="GitHub">
         <h4>GitHub</h4></a>
