--- a/mod.html
+++ b/mod.html
@@ -49,8 +49,9 @@
       <p class="lead">Merge ALL the mods!</p>
       <p class="sub-lead">Here should go some more informations about the current release, but I'm too lazy to invent this text so I'm just writing some senseless stuff here.
       </p>
-<div class="btn-group dropdown-toggle" id="multicol-menu">
-<a href="#" class="btn btn-lg btn-success">downlado</a>
+<div class="btn-group" id="multicol-menu">
+<div class="dropdown-toggle btn-lg btn-success">
+<a href="#">download</a>
 <li class="dropdown-menu">
 </div>
 <ul id="multicol-menu" class="btn btn-lg btn-success">
@@ -67,6 +68,7 @@
                         <li><a href="#">test2-1</a></li>
                         <li><a href="#">test2-2</a></li>
                     </ul>
+                </div>
                 </div>
             </li>
         </ul>
