--- a/build.html
+++ b/build.html
@@ -22,6 +22,15 @@
     <link href="build.css" rel="stylesheet"/>
 <body>
     <div class="container">
+        <div class="masthead">
+        <ul class="nav nav-pills pull-right">
+          <li class="active"><a href="index.html">Hub</a></li>
+          <li><a href="cookieclicker/index.html">Cookie Clicker</a></li>
+          <li><a href="build.html">BuildServ</a></li>
+          <li class="disabled" title="Not released yet"><a href="#">TPT Mod</a></li>
+        </ul>
+        <h2>wolfy1339<br><small>Community Hub</small></h2>
+        </div>
         <div class="page-header">
           <h1>BuildServ <small>get your fresh cup of bleeding edge here!</small></h1>
         </div>
