--- a/build.html
+++ b/build.html
@@ -29,11 +29,9 @@
           <li><a href="build.html">BuildServ</a></li>
           <li class="disabled" title="Not released yet"><a href="#">TPT Mod</a></li>
         </ul>
-        <h2>wolfy1339<br><small>Community Hub</small></h2>
+        <h2>wolfy1339<br><small>BuildServ</small></h2>
         </div>
-        <div class="page-header">
-          <h1>BuildServ <small>get your fresh cup of bleeding edge here!</small></h1>
-        </div>
+        <hr/>
         <div class="row">
             <div class="col-md-12">
                 <div class="alert alert-warning">
