--- a/build.html
+++ b/build.html
@@ -57,9 +57,9 @@
             </div>
             <div class="col-md-3">
                 <img src="https://upload.wikimedia.org/wikipedia/de/thumb/2/2b/Windows_logo_2012-Black.svg/200px-Windows_logo_2012-Black.svg.png" width="64" id="build-os"/>
-                <h3>Windows 32bit <small>WIP</small></h3>
+                <h3>Windows 32bit</h3>
                 <a href="http://buildserv.superdoxin.com/downloads/The-Powder-Toy/32bit-windows.exe">
-                    <img src="http://buildserv.superdoxin.com/The-Powder-Toy_32bit-windows.png">
+                    <img id="build-status" src="http://buildserv.superdoxin.com/The-Powder-Toy_32bit-windows.png">
                 </a>
             </div>
         </div>  
