--- a/build.html
+++ b/build.html
@@ -24,9 +24,9 @@
     <div class="container">
         <div class="masthead">
         <ul class="nav nav-pills pull-right">
-          <li class="active"><a href="index.html">Hub</a></li>
+          <li><a href="index.html">Hub</a></li>
           <li><a href="cookieclicker/index.html">Cookie Clicker</a></li>
-          <li><a href="build.html">BuildServ</a></li>
+          <li class="active"><a href="build.html">BuildServ</a></li>
           <li class="disabled" title="Not released yet"><a href="#">TPT Mod</a></li>
         </ul>
         <h2>wolfy1339<br><small>BuildServ</small></h2>
