--- a/irc.html
+++ b/irc.html
@@ -20,18 +20,29 @@
     <link href="style.css" rel="stylesheet" />
 </head>
 <body>
-    <div class="container-narrow">
+    <div class="container">
       <div class="masthead">
           <ul class="nav nav-pills pull-right">
             <li><a href="index.html">Hub</a></li>
-            <li lclass="active"><a href="irc.html">IRC</a></li>
+            <li><a href="build.html">BuildServ</a></li>
+            <li class="active"><a href="irc.html">IRC</a></li>
             <li class="disabled" title="Not released yet"><a href="#">TPT Mod</a></li>
           </ul>
-          <h2>BMN<br><small>Add title here!</small></h2>
+          <h2>Wolfy1339<br><small>IRC</small></h2>
       </div>
       <hr>
-
-LALA, stuff about IRC
+      
+        <div class="row subheadings">
+      	  <div class="col-md-6">
+      	    <a href="irc://irc.freenode.net:6667/##wolfy1339">
+      	    	<img src="img/irc.png" width="64px" height="64px">
+      	    	<h4>Freenode</h4>
+      	    </a>
+      	    <p>You can find me wolfy1339 and my bots on the Freendoe IRC Network, in the channels ##wolfy1339, #botters, #powder and many more!</p>
+      	    
+      	    <a href=""><h4>Bots</h4></a>
+      	  </div>
+        </div>
 
       <hr>
 
