--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
         <ul class="nav nav-pills pull-right">
           <li class="active"><a href="index.html">Hub</a></li>
           <li><a href="cookieclicker/index.html">Cookie Clicker</a></li>
-	  <li><a href="build.html">BuildServ</a></li>  
+	  <li><a href="build.html">BuildServ</a></li>
+	  <li><a href="irc.html">IRC</a></li>
 	  <li class="disabled" title="Not released yet"><a href="#">TPT Mod</a></li>
             </ul>
             <h2>wolfy1339<br><small>Community Hub</small></h2>
