--- a/build.html
+++ b/build.html
@@ -27,6 +27,7 @@
           <li><a href="index.html">Hub</a></li>
           <li><a href="cookieclicker/index.html">Cookie Clicker</a></li>
           <li class="active"><a href="build.html">BuildServ</a></li>
+          <li><a href="irc.html">IRC</a></li>
           <li class="disabled" title="Not released yet"><a href="#">TPT Mod</a></li>
         </ul>
         <h2>wolfy1339<br><small>BuildServ</small></h2>
