--- a/mod.html
+++ b/mod.html
@@ -36,9 +36,9 @@
     <div class="masthead">
       <ul class="nav nav-pills pull-right">
         <li><a href="index.html">Hub</a></li>
-        <li><a href="infos.html">Infos</a></li>
-        <li><a href="members.html">Members</a></li>
-        <li><a href="ranks.html">Rank System</a></li>
+        <li><a href="cookieclicker/index.html">Cookie Clicker</a></li>
+        <li><a href="build.html">BuildServ</a></li>
+        <li><a href="irc.html">IRC</a></li>
         <li class="active"><a href="mod.html">TPT Mod</a></li>
       </ul>
       <h2>BMN<br><small>The Powder Toy Mod</small></h2>
