--- a/irc.html
+++ b/irc.html
@@ -40,7 +40,8 @@
       	    </a>
       	    <p>You can find me wolfy1339 and my bots on the Freendoe IRC Network, in the channels ##wolfy1339, #botters, #powder and many more!</p>
       	    
-      	    <a href=""><h4>Bots</h4></a>
+      	    <h4>Bots</h4>
+      	    <p>You can find all my bots' source code on <a href="https://github.com/wolfy1339?tab=repositories">my GitHub</a></p>
       	  </div>
         </div>
 
