--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="row subheadings">
           <div class="col-md-6">
             <a href="https://github.com/wolfy1339">
-              <img src="img/github.png" alt="GitHub" rel="prefetch" height="64" width="64">
+              <img src="img/github.png" id ="GitHub" alt="GitHub" rel="prefetch" height="64" width="64">
               <h4>GitHub</h4>
             </a>
             <p>I participate in community projects like the BMN <a href="http://brilliant-minds.github.io/mod.html">The Powder Toy mod</a> and their <a href="http://brilliant-minds.github.io">website</a>.</p>
@@ -120,5 +120,6 @@
     <!-- JavaScript -->
     <script src="bootstrap/js/jquery.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
+    <!--<script type="text/javascript">var imgPath = new String();imgPath = document.getElementById("GitHub").src="img/github.png";var custHeight=screen.height;var custWidth=screen.width;if (custWidth <= 960){document.getElementById("GitHub").src = "img/github-120.png";}}</script>-->   
 </body>
 </html>
