--- a/mod.html
+++ b/mod.html
@@ -50,7 +50,7 @@
       <p class="sub-lead">Here should go some more informations about the current release, but I'm too lazy to invent this text so I'm just writing some senseless stuff here.
       </p>
       <div class="btn-group">
-        <a class="btn btn-large btn-success dropdown-toggle" data-toggle="dropdown" href="#">
+        <a class="btn btn-lg btn-success dropdown-toggle" data-toggle="dropdown" href="#">
           Download
           <span class="caret"></span>
         </a>
@@ -65,6 +65,7 @@
             <a class="btn" href="#">Linux 64-bit</a>
           </div>
         </ul>
+      </div>
 <ul id="multicol-menu" class="nav pull-right">
     <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">MultiCol Menu <b class="caret"></b></a>
@@ -74,24 +75,17 @@
                     <ul class="list-unstyled col-md-4">
                         <li><a href="#">test1-1</a></li>
                         <li><a href="#">test1-2</a></li>
-                        <li><a href="#">test1-3</a></li>
                     </ul>
                     <ul class="list-unstyled col-md-4">
                         <li><a href="#">test2-1</a></li>
                         <li><a href="#">test2-2</a></li>
-                        <li><a href="#">test2-3</a></li>
-                    </ul>
-                    <ul class="list-unstyled col-md-4">
-                        <li><a href="#">test3-1</a></li>
-                        <li><a href="#">test3-2</a></li>
-                        <li><a href="#">test3-3</a></li>
+
                     </ul>
                 </div>
             </li>
         </ul>
     </li>
 </ul>
-      </div>
       <br><small class="muted">in-dev branch:&nbsp;</small>
         <a href="https://travis-ci.org/wolfy1339/Wolfy-Powder-Toy"><img src="https://travis-ci.org/wolfy1339/Wolfy-Powder-Toy.svg?branch=develop" alt="TravisCI"></a>
     </div>
