--- a/mod.html
+++ b/mod.html
@@ -73,12 +73,12 @@
             <li>
                 <div class="row" style="width: 400px;">
                     <ul class="list-unstyled col-md-4">
-                        <li><a href="#">test1-1</a></li>
-                        <li><a href="#">test1-2</a></li>
+                        <a class="btn btn-success" href="#">Windows 32-bit</a>
+                        <a class="btn btn-default" href="#">Windows 64-bit</a>
                     </ul>
                     <ul class="list-unstyled col-md-4">
-                        <li><a href="#">test2-1</a></li>
-                        <li><a href="#">test2-2</a></li>
+                        <a class="btn btn-default" href="#">Linux 32-bit</a>
+                        <a class="btn btn-default" href="#">Linux 64-bit</a>
 
                     </ul>
                 </div>
