--- a/mod.html
+++ b/mod.html
@@ -58,11 +58,11 @@
         <ul class="dropdown-menu">
           <div class="col-md-2 btn-group btn-group-vertical">
             <a class="btn btn-success" href="#">Windows 32-bit</a>
-            <a class="btn" href="#">Windows 64-bit</a>
+            <a class="btn btn-default" href="#">Windows 64-bit</a>
           </div>
           <div class="col-md-2 btn-group btn-group-vertical">
-            <a class="btn" href="#">Linux 32-bit</a>
-            <a class="btn" href="#">Linux 64-bit</a>
+            <a class="btn btn-default" href="#">Linux 32-bit</a>
+            <a class="btn btn-default" href="#">Linux 64-bit</a>
           </div>
         </ul>
       </div>
@@ -86,7 +86,7 @@
         </ul>
     </li>
 </ul>
-      <br><small class="muted">in-dev branch:&nbsp;</small>
+      <br><small class="text-muted">in-dev branch:&nbsp;</small>
         <a href="https://travis-ci.org/wolfy1339/Wolfy-Powder-Toy"><img src="https://travis-ci.org/wolfy1339/Wolfy-Powder-Toy.svg?branch=develop" alt="TravisCI"></a>
     </div>
     <hr>
