--- a/mod.html
+++ b/mod.html
@@ -56,11 +56,11 @@
         </a>
 
         <ul class="dropdown-menu">
-          <div class="col-md-2 btn-group btn-group-vertical">
+          <div class="btn-group btn-group-vertical">
             <a class="btn btn-success" href="#">Windows 32-bit</a>
             <a class="btn btn-default" href="#">Windows 64-bit</a>
           </div>
-          <div class="col-md-2 btn-group btn-group-vertical">
+          <div class="btn-group btn-group-vertical">
             <a class="btn btn-default" href="#">Linux 32-bit</a>
             <a class="btn btn-default" href="#">Linux 64-bit</a>
           </div>
