--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 	  <li><a href="build.html">BuildServ</a></li>
 	  <li><a href="irc.html">IRC</a></li>
 	  <li class="disabled" title="Not released yet"><a href="#">TPT Mod</a></li>
+	  <li><a href="Limnoria">Limnoria</a></li>
             </ul>
             <h2>wolfy1339<br><small>Community Hub</small></h2>
         </div>
