--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <meta name="description" content="Welcome to wolfy1339's 'Sandbox Website'. Here there will be lot's of random things." />
     <meta name="google-site-verification" content="4lR7BiwhfA_pRKzUqOfetn4TYMokB6DVHsnIe63-3Rg" />
     <meta name="msvalidate.01" content="57B77663C1E3F51F4E0EB692FABFB7DA" />
+    <meta name="google-site-verification" content="ED3ELN5Ld4TA27rVYMx6_hoXMDZqA3oa23fGr-Egj5g" />
     <!-- Live Tile & Taskbar Pin-->
     <!--<meta name="application-name" content="Wolfy1339" />
     <meta name="msapplication-starturl" content="http://wolfy1339.tk" />
@@ -107,8 +108,8 @@
             <ul class="forum-list">
               <li><a href="http://powdertoy.co.uk/Discussions/Thread/View.html?Thread=17758">The Group thread</a> at the public TPT forums</li>
               <li><a href="http://www.youtube.com/user/domthegamerofficial">Powder Toy tutorials</a> by dom2mom</li>
-              <li><a href="http://powdertoy.co.uk/Groups/Thread/View.html?Group=832&Thread=1444">Group Announcements</a> and</li>
-              <li><a href="http://powdertoy.co.uk/Groups/Thread/View.html?Group=832&Thread=1427">AC Discussion Page</a> on the group forums</li>
+              <li><a href="http://powdertoy.co.uk/Groups/Thread/View.html?Group=832&amp;Thread=1444">Group Announcements</a> and</li>
+              <li><a href="http://powdertoy.co.uk/Groups/Thread/View.html?Group=832&amp;Thread=1427">AC Discussion Page</a> on the group forums</li>
             </ul>
           </div>
       </div>
