--- a/skeleton.html
+++ b/skeleton.html
@@ -31,7 +31,7 @@
     <link href="style.css" rel="stylesheet" />
 </head>
 <body>
-    <div class="container-narrow">
+    <div class="container">
       <div class="masthead">
           <ul class="nav nav-pills pull-right">
             <li class="active"><a href="index.html">Hub</a></li>
@@ -48,7 +48,7 @@
       <hr>
 
       <div class="footer">
-        <a class="muted" href="https://github.com/wolfy1339/wolfy1339.github.io">repo</a>
+        <a class="text-muted" href="https://github.com/wolfy1339/wolfy1339.github.io">repo</a>
       </div>
 
     </div>
