--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
     <meta property="og:image" content="/img/logo.png" />-->
 
     <!-- Live Tile & Taskbar Pin-->
-    <1--<meta name="application-name" content="Brilliant Minds Of The Navy" />
+    <!--<meta name="application-name" content="Brilliant Minds Of The Navy" />
     <meta name="msapplication-starturl" content="http://brilliant-minds.tk" />
     <meta name="msapplication-navbutton-color" content="#ebf5ff" />
     <meta name="msapplication-window" content="width=1024;height=768" />
