Remove bootstrap-ie7 from source files, rename index.html to Home.html since were making a homepage to link to either my domain or techno156's domain

--- a/irc.html
+++ b/irc.html
@@ -1,23 +1,44 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8" />
-    <title>wolfy1339 &middot; IRC</title>
+<<head>
+    <meta charset="UTF-8" />
+    <title>Wolfy1339 &middot; Sandbox</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- favicons -->
+    <link rel="icon" href="img/wolf.svg" />
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon16.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon32.png" />
     <link rel="icon" type="image/png" sizes="48x48" href="img/favicon48.png" />
-
     <!-- meta -->
-<!--    <meta name="keywords" content="the powder toy, BMN, powder toy, navy, minds, brilliant, brilliant minds of the navy, powder, game, group, mobile, tpt, bomb" />
-    <meta name="description" content="Welcome to the Brilliant Minds of the Navy! This is the website for our group on The Powder Toy" />-->
-
-	
+    <meta name="keywords" content="wolfy1339, bmn, powder toy, tpt" />
+    <meta name="description" content="Welcome to wolfy1339's 'Sandbox Website'. Here there will be lot's of random things." />
+    <meta name="google-site-verification" content="4lR7BiwhfA_pRKzUqOfetn4TYMokB6DVHsnIe63-3Rg" />
+    <meta name="google-site-verification" content="ED3ELN5Ld4TA27rVYMx6_hoXMDZqA3oa23fGr-Egj5g" />
+    <meta name="msvalidate.01" content="57B77663C1E3F51F4E0EB692FABFB7DA" />
+    <meta name="msvalidate.01" content="57B77663C1E3F51F4E0EB692FABFB7DA" />
+    <!-- Live Tile & Taskbar Pin-->
+    <!--<meta name="application-name" content="Wolfy1339" />
+    <meta name="msapplication-starturl" content="http://wolfy1339.tk" />
+    <meta name="msapplication-navbutton-color" content="#ebf5ff" />
+    <meta name="msapplication-window" content="width=1024;height=768" />
+    <meta name="msapplication-tooltip" content="Go to Wolfy1339" />
+    <meta name="msapplication-task" content="name=Infos;action-uri=http://brilliant-minds.tk/index.html" />-->
+    <!-- flip-Ahead -->
+    <!--<link rel="next" href="infos.html" />-->
     <!-- CSS -->
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" />
-    <link href="style.css" rel="stylesheet" />
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet prefetch" />
+    <link href="bootstrap/css/bootstrap-theme.min.css" rel="stylesheet prefetch" />
+    <link href="style.css" rel="stylesheet prefetch" />
+
+    <!-- Compatibility layer for ie -->
+    <!--[if lt IE 9]>
+    <script src="html5shiv.js"></script>
+    <script src="respond.min.js"></script>
+    <![endif]-->
+
+    <!-- Fix for IE mobile -->
+    <script type="text/javascript">if (navigator.userAgent.match(/IEMobile\/10\.0/)) { var msViewportStyle = document.createElement("style"); msViewportStyle.appendChild(document.createTextNode("@-ms-viewport{width:auto!important}")); document.querySelector("head").appendChild(msViewportStyle) }</script>
 </head>
 <body>
     <div class="container">
