--- a/skeleton.html
+++ b/skeleton.html
@@ -17,15 +17,8 @@
     <meta name="google-site-verification" content="ED3ELN5Ld4TA27rVYMx6_hoXMDZqA3oa23fGr-Egj5g" />
     <meta name="msvalidate.01" content="57B77663C1E3F51F4E0EB692FABFB7DA" />
     <meta name="msvalidate.01" content="57B77663C1E3F51F4E0EB692FABFB7DA" />
-    <!-- Live Tile & Taskbar Pin-->
-    <!--<meta name="application-name" content="Wolfy1339" />
-    <meta name="msapplication-starturl" content="http://wolfy1339.tk" />
-    <meta name="msapplication-navbutton-color" content="#ebf5ff" />
-    <meta name="msapplication-window" content="width=1024;height=768" />
-    <meta name="msapplication-tooltip" content="Go to Wolfy1339" />
-    <meta name="msapplication-task" content="name=Infos;action-uri=http://brilliant-minds.tk/index.html" />-->
     <!-- flip-Ahead -->
-    <!--<link rel="next" href="infos.html" />-->
+    <link rel="next" href="Home.html" />
     <!-- CSS -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet prefetch" />
     <link href="bootstrap/css/bootstrap-theme.min.css" rel="stylesheet prefetch" />
