--- a/Home.html
+++ b/Home.html
@@ -46,7 +46,7 @@
     <div class="container">
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
-          <li class="active"><a href="index.html">Hub</a></li>
+          <li class="active"><a href="Home.html">Hub</a></li>
           <li><a href="cookieclicker/index.html">Cookie Clicker</a></li>
 	  <li><a href="build.html">BuildServ</a></li>
 	  <li><a href="irc.html">IRC</a></li>
