--- a/build.html
+++ b/build.html
@@ -45,7 +45,7 @@
     <div class="container">
         <div class="masthead">
         <ul class="nav nav-pills pull-right">
-          <li><a href="index.html">Hub</a></li>
+          <li><a href="Home.html">Hub</a></li>
           <li><a href="cookieclicker/index.html">Cookie Clicker</a></li>
           <li class="active"><a href="build.html">BuildServ</a></li>
           <li><a href="irc.html">IRC</a></li>
