--- a/irc.html
+++ b/irc.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-<<head>
+<head>
     <meta charset="UTF-8" />
     <title>Wolfy1339 &middot; Sandbox</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -44,7 +44,7 @@
     <div class="container">
       <div class="masthead">
           <ul class="nav nav-pills pull-right">
-            <li><a href="index.html">Hub</a></li>
+            <li><a href="Home.html">Hub</a></li>
             <li><a href="build.html">BuildServ</a></li>
             <li class="active"><a href="irc.html">IRC</a></li>
             <li class="disabled" title="Not released yet"><a href="#">TPT Mod</a></li>
