--- a/mod.html
+++ b/mod.html
@@ -44,7 +44,7 @@
   <div class="container">
     <div class="masthead">
       <ul class="nav nav-pills pull-right">
-        <li><a href="index.html">Hub</a></li>
+        <li><a href="Home.html">Hub</a></li>
         <li><a href="cookieclicker/index.html">Cookie Clicker</a></li>
         <li><a href="build.html">BuildServ</a></li>
         <li><a href="irc.html">IRC</a></li>
