--- a/skeleton.html
+++ b/skeleton.html
@@ -37,7 +37,7 @@
     <div class="container">
       <div class="masthead">
           <ul class="nav nav-pills pull-right">
-            <li class="active"><a href="index.html">Hub</a></li>
+            <li><a href="Home.html">Hub</a></li>
             <li><a href="infos.html">Infos</a></li>
             <li class="disabled" title="Not released yet"><a href="#">TPT Mod</a></li>
           </ul>
