--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta name="viewport" content="widtth=device-width, initial-scale=1.0"/>
@@ -11,8 +11,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon32.png" />
     <link rel="icon" type="image/png" sizes="48x48" href="img/favicon48.png" />
     <!-- meta -->
-    <meta name="keywords" content="wolfy1339, bmn, powder toy, tpt" />
-    <meta name="description" content="Welcome to wolfy1339's 'Sandbox Website'. Here there will be lot's of random things." />
+    <meta name="keywords" content="wolfy1339, bmn, powder toy, tpt, techno156" />
+    <meta name="description" content="Welcome to wolfy1339's Website Home page. Here will be the landing page for my website. You can choose to access techno156's webpage ot to access mine.">
     <meta name="google-site-verification" content="4lR7BiwhfA_pRKzUqOfetn4TYMokB6DVHsnIe63-3Rg" />
     <meta name="google-site-verification" content="ED3ELN5Ld4TA27rVYMx6_hoXMDZqA3oa23fGr-Egj5g" />
     <meta name="msvalidate.01" content="57B77663C1E3F51F4E0EB692FABFB7DA" />
@@ -34,7 +34,7 @@
 
     <!-- Fix for IE mobile -->
     <script type="text/javascript">if(navigator.userAgent.match(/IEMobile\/10\.0/)){var msViewportStyle=document.createElement("style");msViewportStyle.appendChild(document.createTextNode("@-ms-viewport{width:auto!important}"));document.querySelector("head").appendChild(msViewportStyle)}</script>
-    <style>.row{margin-top:20px;}body{background-color:#eee;}a h3{text-indent:15%}.logo{display:inline-block;width:256px;border-radius:10px;overflow:hidden;box-shadow:0 0 10px rgba(0,0,0,.45),inset 0 2px 0 rgba(255,255,255,.4);height:256px;background:linear-gradient(top,rgba(255,255,255,.15)0,rgba(0,0,0,.15)100%);background:-moz-linear-gradient(top,rgba(255,255,255,.15)0,rgba(0,0,0,.15)100%);background:-webkit-linear-gradient(top,rgba(255,255,255,.15)0,rgba(0,0,0,.15)100%);background:-o-linear-gradient(top,rgba(255,255,255,.15)0,rgba(0,0,0,.15)100%);background:-ms-linear-gradient(top,rgba(255,255,255,.15)0,rgba(0,0,0,.15)100%)}</style>
+    <style>.row{margin-top:20px;}body{background-color:#eee;}a h3{text-indent:15%}.logo{border-radius:10px;overflow:hidden;box-shadow:0 0 10px rgba(0,0,0,.45),inset 0 2px 0 rgba(255,255,255,.4);background:linear-gradient(top,rgba(255,255,255,.15)0,rgba(0,0,0,.15)100%);background:-moz-linear-gradient(top,rgba(255,255,255,.15)0,rgba(0,0,0,.15)100%);background:-webkit-linear-gradient(top,rgba(255,255,255,.15)0,rgba(0,0,0,.15)100%);background:-o-linear-gradient(top,rgba(255,255,255,.15)0,rgba(0,0,0,.15)100%);background:-ms-linear-gradient(top,rgba(255,255,255,.15)0,rgba(0,0,0,.15)100%)}</style>
 </head>
 <body>
     <div class="container">
@@ -42,13 +42,13 @@
         <div class="row">
             <div class="col-md-6">
                 <a href="Home.html">
-                    <img src="img/wolf.svg" width="256px" height="256px" alt="wolfy1339's howling wolf logo" class="logo" />
+                    <img src="img/wolf.svg" width="256px" height="256px" alt="wolfy1339's howling wolf logo" class="logo img-responsive" />
                     <h3 title="Access Wolfy1339's website">wolfy1339</h3>
                 </a>
             </div>
             <div class="col-md-6">
                 <a href="//techno156.wolfy1339.tk">
-                    <img src="img/techno156.png" width="256px" height="256px" type="image/png" class="logo" />
+                    <img src="img/techno156.png" width="256px" height="256px" type="image/png" class="logo img-responsive" />
                     <h3 title="Access techno156's wesite">techno156</h3>
                 </a>
             </div>
